[package]
name = "cassowary_visualiser"
version = "0.1.0"
authors = ["Konstantin Terziev <kd.terziev@gmail.com>"]
description = "Express and test your graphical layout ideas using Cassowary."
repository = "https://github.com/MrKonstantinT/cassowary-visualiser/"
readme = "README.md"
keywords = ["visualiser", "cassowary", "solver", "layouts"]
license = "MIT"

[dependencies]
getopts = "^0"
gtk = "^0"
gdk = "^0"
cairo-rs = "^0"
cassowary = { git = "https://github.com/MrKonstantinT/rust-cassowary/" }

[features]
gtk_3_6 = ["gtk/v3_6"]
